--- a/Code/HTML/Global/Header.html
+++ b/Code/HTML/Global/Header.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../CSS/Global/Header.css" />
+  <title>Document</title>
+</head>
+
+
+
+<body>
 <header>
-  <h1>Δημιουργία Λογαριασμού Διασώστη</h1>
   <div class="admin-profile">
     <img src="" alt="Admin Icon" id="adminImage" />
     <div class="dropdown" id="user-options">
@@ -10,14 +22,22 @@
       </div>
     </div>
   </div>
+  <div class="header-center">
+    <h1>Δημιουργία Λογαριασμού Διασώστη</h1>
+  </div>
+  <div class="hamburger-menu right" id="hamburgerMenu">
+    <div class="bar"></div>
+    <div class="bar"></div>
+    <div class="bar"></div>
+  </div>
   <nav>
-    <ul>
+    <ul class="hide-on-mobile">
+      <li><a href="#">Χαρτης</a></li>
       <li><a href="#">Upload Data</a></li>
       <li><a href="#">Προϊοντα</a></li>
-      <li><a href="#">Καταστηματα</a></li>
-      <li><a href="#">Στατιστικα</a></li>
-      <li><a href="#">Leaderboard</a></li>
-      <li><a href="#">Χαρτης</a></li>
     </ul>
   </nav>
 </header>
+<script src="../../JavaScript/User/citizen_navbar.js"></script>
+</body>
+</html>
