--- a/Code/HTML/Admin/map.html
+++ b/Code/HTML/Admin/map.html
@@ -3,53 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link
+      rel="stylesheet"
+      href="../../CSS/Global/pop_ups.css"
+    />
+    <link rel="stylesheet" href="../../CSS/Global/toolbar_style.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="../../CSS/map.css">
+    <link rel="stylesheet" href="../../CSS/Global/showbox.css" />
+    <link rel="stylesheet" href="../../CSS/Global/switches_style.css" />
     <title>Map with Subcategories</title>
 </head>
 <body>
-  <header>
-    <h1>Map with Subcategories</h1>
-</header>
+
+<div id="Header"></div>
+<div class="container">
+  <div class="toolbar">
+
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="acceptedRequestsSwitch" data-toggle="toggle">
+      <label class="form-check-label" for="acceptedRequestsSwitch" >Accepted Requests</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="pendingRequestsSwitch">
+      <label class="form-check-label" for="pendingRequestsSwitch">Pending Requests</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="offersSwitch">
+      <label class="form-check-label" for="offersSwitch">Offers</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="vehiclesWithTasksSwitch">
+      <label class="form-check-label" for="vehiclesWithTasksSwitch">Vehicles with Active Tasks</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="vehiclesWithoutTasksSwitch">
+      <label class="form-check-label" for="vehiclesWithoutTasksSwitch">Vehicles without Active Tasks</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="showLinesSwitch">
+      <label class="form-check-label" for="showLinesSwitch">Show Lines</label>
+    </div>
+
+  </div>
+
+<div id="vehicleCargoDetails" >
+  <div class="cargo-title"></strong>Φορτίο Οχήματος</div>
+    <div id="cargoList" class="cargo-details">
+    </div>
+</div>
+
 <main>
     <div id="map"></div>
     <!-- Filter toggles -->
-    <div class="mt-3">
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="acceptedRequestsSwitch" data-toggle="toggle">
-        <label class="form-check-label" for="acceptedRequestsSwitch" >Accepted Requests</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="pendingRequestsSwitch">
-        <label class="form-check-label" for="pendingRequestsSwitch">Pending Requests</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="offersSwitch">
-        <label class="form-check-label" for="offersSwitch">Offers</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="vehiclesWithTasksSwitch">
-        <label class="form-check-label" for="vehiclesWithTasksSwitch">Vehicles with Active Tasks</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="vehiclesWithoutTasksSwitch">
-        <label class="form-check-label" for="vehiclesWithoutTasksSwitch">Vehicles without Active Tasks</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="showLinesSwitch">
-        <label class="form-check-label" for="showLinesSwitch">Show Lines</label>
-      </div>
-    </div>
 </main>
+</div>
 
 <script type="module" src="../../JavaScript/Admin/new_map.js"></script>
 <script type="module" src="../../JavaScript/Admin/map_filters.js"></script> 
-
-
+<script src="../../JavaScript/Global/showMessage.js"></script>
+<script src="../../JavaScript/Global/HeaderCall.js"></script>
 
 </body>
 </html>
