Τελικες λειτουργιες του Header

--- a/Code/HTML/Global/Header.html
+++ b/Code/HTML/Global/Header.html
@@ -12,18 +12,18 @@
 
 <body>
 <header>
-  <div class="admin-profile">
-    <img src="" alt="Admin Icon" id="adminImage" />
+  <div class="user-profile">
+    <img src="" alt="User Icon" id="userImage" />
     <div class="dropdown" id="user-options">
-      <span class="admin-name" id="adminName">Admin</span>
+      <span class="user-name" id="userName">asd</span>
       <div class="dropdown-content">
-        <a href="admin_profile_setting.html">Επεξεργασία Προφίλ</a>
+        <a href="../Global/user_profile_settings.html">Επεξεργασία Προφίλ</a>
         <a href="" id="logout-link">Αποσύνδεση</a>
       </div>
     </div>
   </div>
   <div class="header-center">
-    <h1>Δημιουργία Λογαριασμού Διασώστη</h1>
+    <h1></h1>
   </div>
   <div class="hamburger-menu right" id="hamburgerMenu">
     <div class="bar"></div>
@@ -31,13 +31,12 @@
     <div class="bar"></div>
   </div>
   <nav>
-    <ul class="hide-on-mobile">
-      <li><a href="#">Χαρτης</a></li>
-      <li><a href="#">Upload Data</a></li>
-      <li><a href="#">Προϊοντα</a></li>
+    <ul class="hide-on-mobile" id="nav-items">
+
     </ul>
   </nav>
 </header>
 <script src="../../JavaScript/User/citizen_navbar.js"></script>
+<script src="../../JavaScript/Global/logout.js"></script>
 </body>
 </html>
