Fixed maps filters for Admin

--- a/Code/HTML/Admin/map.html
+++ b/Code/HTML/Admin/map.html
@@ -41,8 +41,12 @@
       <label class="form-check-label" for="pendingRequestsSwitch">Pending Requests</label>
     </div>
     <div class="form-check form-switch filter-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="offersSwitch">
-      <label class="form-check-label" for="offersSwitch">Offers</label>
+      <input class="form-check-input" type="checkbox" role="switch" id="pendingOffersSwitch">
+      <label class="form-check-label" for="pendingoffersSwitch">Pending Offers</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="acceptedOffersSwitch">
+      <label class="form-check-label" for="acceptedoffersSwitch">Accepted Offers</label>
     </div>
     <div class="form-check form-switch filter-switch">
       <input class="form-check-input" type="checkbox" role="switch" id="vehiclesWithTasksSwitch">
