--- a/Code/HTML/Rescuer/map.html
+++ b/Code/HTML/Rescuer/map.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="../../CSS/map.css">
+    <link rel="stylesheet" href="../../CSS/Rescuer/map.css">
     <title>Map with Subcategories</title>
 </head>
 
@@ -18,37 +18,40 @@
     <h1>Map with Subcategories</h1>
 </header>
 <main>
-    <div id="map"></div>
-    <!-- Filter toggles -->
-    <div class="mt-3">
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="acceptedRequestsSwitch" data-toggle="toggle">
-        <label class="form-check-label" for="acceptedRequestsSwitch" >Accepted Requests</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="pendingRequestsSwitch">
-        <label class="form-check-label" for="pendingRequestsSwitch">Pending Requests</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="offersSwitch">
-        <label class="form-check-label" for="offersSwitch">Offers</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="vehiclesWithTasksSwitch">
-        <label class="form-check-label" for="vehiclesWithTasksSwitch">Vehicles with Active Tasks</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="vehiclesWithoutTasksSwitch">
-        <label class="form-check-label" for="vehiclesWithoutTasksSwitch">Vehicles without Active Tasks</label>
-      </div>
-      <div class="form-check form-switch filter-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="showLinesSwitch">
-        <label class="form-check-label" for="showLinesSwitch">Show Lines</label>
-      </div>
+  <div id="map"></div>
+  <div id="task-panel" class="task-panel">
+      <h2>Τρέχοντα Tasks</h2>
+      <ul id="task-list" class="list-group"></ul>
+  </div>
+  <!-- Filter toggles -->
+  <div class="mt-3">
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="assignedRequestsSwitch" data-toggle="toggle">
+      <label class="form-check-label" for="assignedRequestsSwitch">Assigned Requests</label>
     </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="unassignedRequestsSwitch" data-toggle="toggle">
+      <label class="form-check-label" for="unassignedRequestsSwitch">Unassigned Requests</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="assignedOffersSwitch">
+      <label class="form-check-label" for="assignedOffersSwitch">Assigned Offers</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="unassignedOffersSwitch">
+      <label class="form-check-label" for="unassignedOffersSwitch">Unassigned Offers</label>
+    </div>
+    <div class="form-check form-switch filter-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="showLinesSwitch">
+      <label class="form-check-label" for="showLinesSwitch">Show Lines</label>
+    </div>
+  </div>
 </main>
 
 <script type="module" src="../../JavaScript/Rescuer/map.js"></script>
+<script type="module" src="../../JavaScript/Rescuer/map_filters.js"></script>
+<script type="module" src="../../JavaScript/Rescuer/task_panel.js"></script>
+
 <!-- <script type="module" src="../../JavaScript/Admin/map_filters.js"></script> -->
 
 
