--- a/Code/HTML/Admin/form_completion.html
+++ b/Code/HTML/Admin/form_completion.html
@@ -71,6 +71,7 @@
 
     <script src="../../JavaScript/Global/antigeo_form.js"></script>
     <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/responsive_navbar.js"></script>
     <script src="../../JavaScript/Global/forms_management.js"></script>
     <script src="../../JavaScript/Global/showMessage.js"></script>
   </body>
