--- a/Code/HTML/Admin/upload_products.html
+++ b/Code/HTML/Admin/upload_products.html
@@ -241,6 +241,9 @@
       </div>
 
       <div class="main">
+        <div>
+          <button class="show-toolbar"><img src=".right_arrow.png" alt=""></button>
+        </div>
         <div class="search-area">
           <div id="search_bar">
             <input
@@ -297,6 +300,7 @@
     <script src="../../JavaScript/Admin/uploadData.js"></script>
     <script src="../../JavaScript/Admin/category_operations.js"></script>
     <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/responsive_navbar.js"></script>
     <script src="../../JavaScript/Admin/operations_products.js"></script>
     <script src="../../JavaScript/Global/showMessage.js"></script>
     <script src="../../JavaScript/Admin/tabs-operations.js"></script>
