--- a/Code/HTML/Global/Header.html
+++ b/Code/HTML/Global/Header.html
@@ -25,7 +25,7 @@
   <div class="header-center">
     <h1></h1>
   </div>
-  <div class="hamburger-menu right" id="hamburgerMenu">
+  <div class="hamburger-menu" id="hamburgerMenu">
     <div class="bar"></div>
     <div class="bar"></div>
     <div class="bar"></div>
@@ -36,7 +36,7 @@
     </ul>
   </nav>
 </header>
-<script src="../../JavaScript/User/citizen_navbar.js"></script>
+<script src="../../JavaScript/Global/responsive_navbar.js"></script>
 <script src="../../JavaScript/Global/logout.js"></script>
 </body>
 </html>
