--- a/Code/HTML/Global/index_page.html
+++ b/Code/HTML/Global/index_page.html
@@ -15,5 +15,6 @@
     </div>
     </main>
     <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/responsive_navbar.js"></script>
 </body>
 </html>
