Διορθωση του vehicles_assignments σε VehicleAssignments σε οποιο αρχειο χρειαστηκε και επισης αλλαγες και προσθηκες για το panel και τον χαρτη του διασωστη

--- a/Code/HTML/Admin/map.html
+++ b/Code/HTML/Admin/map.html
@@ -21,7 +21,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="../../CSS/map.css">
+    <link rel="stylesheet" href="../../CSS/Admin/map.css">
     <link rel="stylesheet" href="../../CSS/Global/showbox.css" />
     <link rel="stylesheet" href="../../CSS/Global/switches_style.css" />
     <title>Map with Subcategories</title>
