--- a/Code/HTML/Rescuer/map.html
+++ b/Code/HTML/Rescuer/map.html
@@ -1,60 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="../../CSS/Rescuer/map.css">
+    <link rel="stylesheet" href="../../CSS/Rescuer/map.css" />
+    <link rel="stylesheet" href="../../CSS/Global/switches_style.css" />
+    <link rel="stylesheet" href="../../CSS/Global/toolbar_style.css" />
+    <link rel="stylesheet" href="../../CSS/Global/pop_ups.css" />
     <title>Map with Subcategories</title>
-</head>
+  </head>
 
-   
-<body>
-  <header>
-    <h1>Map with Subcategories</h1>
-</header>
-<main>
-  <div id="map"></div>
-  <div id="task-panel" class="task-panel">
-      <h2>Τρέχοντα Tasks</h2>
-      <ul id="task-list" class="list-group"></ul>
-  </div>
-  <!-- Filter toggles -->
-  <div class="mt-3">
-    <div class="form-check form-switch filter-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="assignedRequestsSwitch" data-toggle="toggle">
-      <label class="form-check-label" for="assignedRequestsSwitch">Assigned Requests</label>
-    </div>
-    <div class="form-check form-switch filter-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="unassignedRequestsSwitch" data-toggle="toggle">
-      <label class="form-check-label" for="unassignedRequestsSwitch">Unassigned Requests</label>
-    </div>
-    <div class="form-check form-switch filter-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="assignedOffersSwitch">
-      <label class="form-check-label" for="assignedOffersSwitch">Assigned Offers</label>
-    </div>
-    <div class="form-check form-switch filter-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="unassignedOffersSwitch">
-      <label class="form-check-label" for="unassignedOffersSwitch">Unassigned Offers</label>
-    </div>
-    <div class="form-check form-switch filter-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="showLinesSwitch">
-      <label class="form-check-label" for="showLinesSwitch">Show Lines</label>
-    </div>
-  </div>
-</main>
+  <body>
+    <div id="Header"></div>
+    <main>
+      <div id="map"></div>
+      <div id="task-panel" class="task-panel">
+        <h2>Τρέχοντα Tasks</h2>
+        <ul id="task-list" class="list-group"></ul>
+      </div>
 
-<script type="module" src="../../JavaScript/Rescuer/map.js"></script>
-<script type="module" src="../../JavaScript/Rescuer/map_filters.js"></script>
-<script type="module" src="../../JavaScript/Rescuer/task_panel.js"></script>
+      <!-- Filter toggles -->
+      <div class="toolbar">
+        <div class="form-check form-switch filter-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="assignedRequestsSwitch"
+            data-toggle="toggle"
+          />
+          <label class="form-check-label" for="assignedRequestsSwitch"
+            >Assigned Requests</label
+          >
+        </div>
+        <div class="form-check form-switch filter-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="unassignedRequestsSwitch"
+            data-toggle="toggle"
+          />
+          <label class="form-check-label" for="unassignedRequestsSwitch"
+            >Unassigned Requests</label
+          >
+        </div>
+        <div class="form-check form-switch filter-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="assignedOffersSwitch"
+          />
+          <label class="form-check-label" for="assignedOffersSwitch"
+            >Assigned Offers</label
+          >
+        </div>
+        <div class="form-check form-switch filter-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="unassignedOffersSwitch"
+          />
+          <label class="form-check-label" for="unassignedOffersSwitch"
+            >Unassigned Offers</label
+          >
+        </div>
+        <div class="form-check form-switch filter-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="showLinesSwitch"
+          />
+          <label class="form-check-label" for="showLinesSwitch"
+            >Show Lines</label
+          >
+        </div>
+      </div>
+    </main>
 
-<!-- <script type="module" src="../../JavaScript/Admin/map_filters.js"></script> -->
+    <script type="module" src="../../JavaScript/Rescuer/map.js"></script>
+    <script
+      type="module"
+      src="../../JavaScript/Rescuer/map_filters.js"
+    ></script>
+    <script type="module" src="../../JavaScript/Rescuer/task_panel.js"></script>
+    <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/showMessage.js"></script>
 
-
-
-</body>
+    <!-- <script type="module" src="../../JavaScript/Admin/map_filters.js"></script> -->
+  </body>
 </html>
