--- a/Code/HTML/Admin/admin_announcements.html
+++ b/Code/HTML/Admin/admin_announcements.html
@@ -58,7 +58,7 @@
       </div>
       <main>
         <div>
-          <button class="show-toolbar"><img src=".right_arrow.png" alt=""></button>
+          <button class="show-toolbar"><img src="../../../upload_img/global/right_arrow.png" alt=""></button>
         </div>
         <h2>Πίνακας Ανακοινώσεων</h2>
         <div class="scroll-container">
