--- a/Code/HTML/Admin/statistics.html
+++ b/Code/HTML/Admin/statistics.html
@@ -25,7 +25,7 @@
 
 <div class="main">
     <div>
-        <button class="show-toolbar"><img src=".right_arrow.png" alt=""></button>
+        <button class="show-toolbar"><img src="../../../upload_img/global/right_arrow.png" alt=""></button>
     </div>
     <div id="date-filter">
         <label for="start-date">Αρχική Ημερομηνία:</label>
