--- a/Code/HTML/Admin/upload_products.html
+++ b/Code/HTML/Admin/upload_products.html
@@ -242,7 +242,7 @@
 
       <div class="main">
         <div>
-          <button class="show-toolbar"><img src=".right_arrow.png" alt=""></button>
+          <button class="show-toolbar"><img src="../../../upload_img/global/right_arrow.png" alt=""></button>
         </div>
         <div class="search-area">
           <div id="search_bar">
