Προσαρμογές στις σελίδες του διαχειριστή και σε elements που χρειάζονται για όλους

--- a/Code/HTML/Admin/map.html
+++ b/Code/HTML/Admin/map.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="../../CSS/Admin/map.css">
     <link rel="stylesheet" href="../../CSS/Global/showbox.css" />
     <link rel="stylesheet" href="../../CSS/Global/switches_style.css" />
+    <link rel="stylesheet" href="../../CSS/Global/toolbars_buttons.css" />
     <title>Map with Subcategories</title>
 </head>
 <body>
@@ -70,6 +71,9 @@
 </div>
 
 <main>
+  <div>
+    <button class="show-toolbar"><img src="../../../upload_img/global/right_arrow.png" alt=""></button>
+  </div>
     <div id="map"></div>
     <!-- Filter toggles -->
 </main>
@@ -79,6 +83,7 @@
 <script type="module" src="../../JavaScript/Admin/map_filters.js"></script> 
 <script src="../../JavaScript/Global/showMessage.js"></script>
 <script src="../../JavaScript/Global/HeaderCall.js"></script>
+<script src="../../JavaScript/Global/responsive_navbar.js"></script>
 
 </body>
 </html>
