--- a/Code/HTML/Global/user_profile_settings.html
+++ b/Code/HTML/Global/user_profile_settings.html
@@ -67,6 +67,7 @@
 </main>
 
 <script src="../../JavaScript/Global/HeaderCall.js"></script>
+<script src="../../JavaScript/Global/responsive_navbar.js"></script>
 <script src="../../JavaScript/Global/get_users_data.js"></script>
 <script src="../../JavaScript/Global/showMessage.js"></script>
 <script src="../../JavaScript/Global/showPassword.js"></script>
