--- a/Code/HTML/User/offers_page.html
+++ b/Code/HTML/User/offers_page.html
@@ -124,6 +124,7 @@
       </div>
     </div>
     <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/responsive_navbar.js"></script>
     <script src="../../JavaScript/User/available_announcements.js"></script>
     <script src="../../JavaScript/Global/showMessage.js"></script>
     <script src="../../JavaScript/User/manage_tables.js"></script>
