--- a/Code/HTML/User/request_page.html
+++ b/Code/HTML/User/request_page.html
@@ -143,6 +143,7 @@
       </div>
     </div>
     <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/responsive_navbar.js"></script>
     <script src="../../JavaScript/Admin/loadCategories.js"></script>
     <script src="../../JavaScript/Global/PSF.js"></script>
     <script src="../../JavaScript/User/available_items.js"></script>
