Το right-arrow button είναι λειτουργικό - minor fixes

--- a/Code/HTML/User/offers_page.html
+++ b/Code/HTML/User/offers_page.html
@@ -64,6 +64,9 @@
       </div>
 
       <div class="main">
+      <div>
+         <button class="show-toolbar"><img src="../../../upload_img/global/right_arrow.png" alt=""></button>
+      </div>
         <div class="scroll-container">
         <table id="table_of_announcements">
           <thead>
