--- a/Code/HTML/User/request_page.html
+++ b/Code/HTML/User/request_page.html
@@ -61,6 +61,9 @@
       </div>
 
       <div class="main">
+        <div>
+          <button class="show-toolbar"><img src="../../../upload_img/global/right_arrow.png" alt=""></button>
+        </div>
         <div class="search-area">
           <div id="search_bar">
             <input
