Προσθήκες για το layout του Rescuer

--- a/Code/HTML/Rescuer/cargo_page.html
+++ b/Code/HTML/Rescuer/cargo_page.html
@@ -75,6 +75,9 @@
     </div>
 
     <div class = "main"> 
+      <div>
+        <button class="show-toolbar"><img src="../../../upload_img/global/right_arrow.png" alt=""></button>
+      </div>
         <div class="search-area">
             <div id="search_bar">
               <input
@@ -122,6 +125,7 @@
 
 
     <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/responsive_navbar.js"></script>
     <script src="../../JavaScript/Admin/loadCategories.js"></script>
     <script src="../../JavaScript/Global/showMessage.js"></script>
     <script src="../../JavaScript/Global/PSF.js"></script>
