--- a/Code/HTML/Rescuer/choose_vehicle.html
+++ b/Code/HTML/Rescuer/choose_vehicle.html
@@ -17,10 +17,11 @@
     <link rel="stylesheet" href="../../CSS/Rescuer/choose_vehicle.css" />
     <link rel="stylesheet" href="../../CSS/Global/showbox.css" />
     <link rel="stylesheet" href="../../CSS/Global/tables_style.css" />
+    <link rel="stylesheet" href="../../CSS/Global/toolbar_style.css" />
   </head>
   <body>
     <div id="Header"></div>
-
+    <div class="container">
     <main>    
       <h2 id = "tables_title">Πίνακας Επιλογης Οχήματος</h2>
 
@@ -40,8 +41,9 @@
         </tbody>
       </table>
     </main>
-
+  </div>
     <script src="../../JavaScript/Global/HeaderCall.js"></script>
+    <script src="../../JavaScript/Global/responsive_navbar.js"></script>
     <script src="../../JavaScript/Rescuer/getAvailableVehicles.js"></script>
     <script src="../../JavaScript/Global/showMessage.js"></script>
   </body>
