Προσαρμογές για το toolbar και να λειτουργούν οκ τα overlays

--- a/Code/HTML/Rescuer/map.html
+++ b/Code/HTML/Rescuer/map.html
@@ -37,7 +37,7 @@
       
       <!-- Filter toggles -->
       <div class="toolbar">
-        <div class="form-check form-switch filter-switch">
+        <div class="form-check form-switch filter-switch" id="form-check-label-accepted-requests">
           <input
             class="form-check-input"
             type="checkbox"
