--- a/Code/HTML/Global/Header.html
+++ b/Code/HTML/Global/Header.html
@@ -31,7 +31,7 @@
     <div class="bar"></div>
   </div>
   <nav>
-    <ul class="hide-on-mobile" id="nav-items"> 
+    <ul id="nav-items"> 
      <li>
       <a href="javascript:void(0);" onclick="goBack()" id="backButton"
         >Πίσω</a
